--- a/package.json
+++ b/package.json
@@ -8,21 +8,35 @@
   "dependencies": {
     "@babel/core": "^7.13.8",
     "@babel/node": "^7.13.0",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.9",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "css-loader": "^5.1.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^4.4.1",
+    "mini-css-extract-plugin": "^1.3.9",
     "mongoose": "^5.12.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.2"
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^5.2.0",
+    "pug": "^3.0.2",
+    "sass-loader": "^11.0.1",
+    "webpack": "^5.26.3",
+    "webpack-cli": "^4.5.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js"
+    "dev:server": "nodemon --exec babel-node init.js",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
