--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.9",
     "autoprefixer": "^10.2.5",
+    "aws-sdk": "^2.894.0",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
@@ -26,6 +27,7 @@
     "mongoose": "^5.12.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^5.0.0",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
