--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.9",
     "autoprefixer": "^10.2.5",
-    "aws-sdk": "^2.894.0",
+    "aws-sdk": "^2.895.0",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "get-blob-duration": "^1.2.0",
     "helmet": "^4.4.1",
     "mini-css-extract-plugin": "^1.3.9",
     "mongoose": "^5.12.0",
