--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
   "author": "Seonghee Jeon",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/node": "^7.13.0",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.2",
+    "@babel/node": "^7.14.2",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.9",
     "autoprefixer": "^10.2.5",
     "aws-sdk": "^2.895.0",
     "axios": "^0.21.1",
+    "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "css-loader": "^5.1.3",
-    "dotenv": "^8.2.0",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -42,9 +44,14 @@
     "webpack-cli": "^4.5.0"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'static'",
-    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack"
+    "dev:server": "nodemon --exec babel-node src/init.js --delay 2 --ignore 'static'",
+    "dev:assets": "cd src && cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
+    "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js",
+    "copyAll": "xcopy src\\static build\\static /d /e /h /c /y /i && xcopy src\\views build\\views /d /e /h /c /y /i",
+    "prebuild": "rd /s /Q \"build\"",
+    "build": "npm run build:server && npm run build:assets && npm run copyAll",
+    "start": "node build/init.js"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
