--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "autoprefixer": "^10.2.5",
     "aws-sdk": "^2.895.0",
     "axios": "^0.21.1",
-    "babel": "^6.23.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "connect-mongo": "^4.4.1",
