--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "copyAll": "shx cp -R src/static build && shx cp -R src/views build",
     "prebuild": "shx rm -rf build",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
-    "start": "node build/init.js"
+    "start": "PRODUCTION=true node build/init.js"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
